[gd_scene load_steps=5 format=3 uid="uid://cdhv1rm3fo1eo"]

[ext_resource type="Texture2D" uid="uid://cmolgyduhxcxo" path="res://Asset/UI/back.bmp" id="1_0hfbf"]
[ext_resource type="Script" uid="uid://cnp0aykddnlog" path="res://UI/create_room/create_room.gd" id="1_bwk1q"]
[ext_resource type="FontFile" uid="uid://b5nd0c05eyg4j" path="res://HarmonyOS_Sans_Regular.ttf" id="2_bwk1q"]
[ext_resource type="PackedScene" uid="uid://ctn11r6q450oe" path="res://UI/FPS/帧率.tscn" id="4_ujf3o"]

[node name="create_room" type="Node2D"]
script = ExtResource("1_bwk1q")

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_0hfbf")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1152, 648)
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 25

[node name="Input" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwk1q")
theme_override_font_sizes/font_size = 30
text = "端口:"
clear_button_enabled = true

[node name="Create" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwk1q")
theme_override_font_sizes/font_size = 30
text = "创建"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwk1q")
theme_override_font_sizes/font_size = 30
text = "返回"

[node name="帧率" parent="." instance=ExtResource("4_ujf3o")]

[connection signal="text_changed" from="CenterContainer/VBoxContainer/Input" to="." method="_on_input_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
